# irsl_ros_msgs

./: CMakeLists.txt  README.md
irsl_detection_msgs/: CMakeLists.txt  package.xml
irsl_detection_msgs/msg/: InstanceSegmentation.msg  ObjectDetectionFull.msg
irsl_detection_srvs/: CMakeLists.txt  package.xml
irsl_detection_srvs/srv/: GetInstanceSegmentation.srv  GetObjectDetection.srv
msg/: ObjectDetection.msg
